[tool.poetry]
name = "The Game"
version = "0.1.0"
description = ""
authors = ["Raphael Schönenberger <raphael.schoenenberger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
ipython = "*"
jupyterlab = "^3.6.2"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"